# mlog

./: CMakeLists.txt  component.yaml
build_example/: CMakeCache.txt  Makefile  basic_example  cmake_install.cmake  libmlog.so.1  libmlog.so.1.0.0
cmake/: mlogConfig.cmake.in
example/: basic_example.cpp
include/mlog/: async_queue.h  config.h  console_sink.h  file_sink.h  formatter.h  log_level.h  logger.h  mlog.h  sink.h
src/: CMakeLists.txt  async_queue.cpp  config.cpp  console_sink.cpp  file_sink.cpp  formatter.cpp  logger.cpp
test/: test_logger.cpp
